--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<table>
 				<tr>
 					<td>
-						<label for="cargo" class="pergunta">Natureza do Cargo:</label>
+						<label for="cargo">Natureza do Cargo:</label>
 					</td>
 				</tr>
 				<tr>
@@ -104,7 +104,7 @@
 				</tr>
 				<tr>
 					<td>
-						<label for="area" class="pergunta">Área de Interesse:</label>
+						<label for="area" >Área de Interesse:</label>
 					</td>
 				</tr>
 				<tr>
@@ -133,7 +133,7 @@
 				</tr>
 				<tr>
 					<td>
-						<label for="avaliacao" class="pergunta">De 0 a 10, o quanto você se acha capaz de executar as atividades
+						<label for="avaliacao">De 0 a 10, o quanto você se acha capaz de executar as atividades
 							deste
 							cargo?</label>
 					</td>
@@ -141,7 +141,7 @@
 				<tr>
 					<td>
 						<input type="range" name="avaliacao" id="avaliacaoIn" step="1" min="0" max="10"
-							oninput="avaliacaoOut.value = avaliacaoIn.value" value="0" class="range">
+							oninput="avaliacaoOut.value = avaliacaoIn.value" value="0">
 					</td>
 				</tr>
 				<tr>
