--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 				</tr>
 				<tr>
 					<td>
-						<label for="curriculo" class="pergunta">Mini currículo</label>
+						<label for="curriculo">Mini currículo</label>
 					</td>
 				</tr>
 				<tr>
